Prefer Integer.valueOf to new Integer.