@@ -199,13 +199,13 @@ public final class VM_Field extends VM_Member {
     if (type.isReferenceType()) {
       return getObjectValueUnchecked(obj);
     } else {
-      if (type.isCharType())     return new Character(getCharValueUnchecked(obj));
-      if (type.isDoubleType())   return new Double(getDoubleValueUnchecked(obj));
-      if (type.isFloatType())    return new Float(getFloatValueUnchecked(obj));
-      if (type.isLongType())     return new Long(getLongValueUnchecked(obj));
-      if (type.isIntType())      return new Integer(getIntValueUnchecked(obj));
-      if (type.isShortType())    return new Short(getShortValueUnchecked(obj));
-      if (type.isByteType())     return new Byte(getByteValueUnchecked(obj));
+      if (type.isCharType())     return Character.valueOf(getCharValueUnchecked(obj));
+      if (type.isDoubleType())   return Double.valueOf(getDoubleValueUnchecked(obj));
+      if (type.isFloatType())    return Float.valueOf(getFloatValueUnchecked(obj));
+      if (type.isLongType())     return Long.valueOf(getLongValueUnchecked(obj));
+      if (type.isIntType())      return Integer.valueOf(getIntValueUnchecked(obj));
+      if (type.isShortType())    return Short.valueOf(getShortValueUnchecked(obj));
+      if (type.isByteType())     return Byte.valueOf(getByteValueUnchecked(obj));
       if (type.isBooleanType())  return Boolean.valueOf(getBooleanValueUnchecked(obj));
       return null;
     }
